# project-alice

./: .gitignore  LICENSE  README.md  index.html  install.ps1  install.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: PRD.md
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: changes.rs  mod.rs  project.rs  pty.rs  session.rs  settings.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src-tauri/src/git/: diff.rs  mod.rs  repo.rs  status.rs  worktree.rs
src-tauri/src/pty/: handle.rs  mod.rs  platform.rs  reader.rs
src-tauri/src/watcher/: debounce.rs  mod.rs
src-tauri/tests/: db_operations.rs  git_diff.rs  git_repo.rs  git_status.rs  git_worktree.rs
src-tauri/tests/helpers/: mod.rs
src/components/changes/: ChangesPanel.tsx  DiffViewer.tsx  FileChangeItem.test.tsx  FileChangeItem.tsx
src/components/layout/: AppLayout.tsx  PanelContainer.tsx  PanelResizer.tsx
src/components/project/: ProjectPicker.tsx
src/components/sessions/: DeleteSessionDialog.test.tsx  DeleteSessionDialog.tsx  NewSessionDialog.test.tsx  (+5 more)
src/lib/: tauri.test.ts  tauri.ts  types.ts
src/stores/: changesStore.test.ts  changesStore.ts  sessionStore.test.ts  sessionStore.ts  settingsStore.test.ts  settingsStore.ts  terminalStore.test.ts  terminalStore.ts
src/styles/: global.css  panels.css  theme.css
src/test/: helpers.ts  setup.ts
(+10 files in other folders)
