[package]
name = "project-alice"
version = "0.1.0"
edition = "2021"

[lib]
name = "project_alice_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "project-alice"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
portable-pty = "0.8"
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
notify = "7"
notify-debouncer-mini = "0.5"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
